# gerrit-cli

./: .gitignore  README.md  clean  install  requirements.txt  setup.cfg  setup.py  test-requirements.txt  tox.ini
gerrit_cli/: gerrit-cli.json  gerrit.py  gerrit_list.py  gerrit_query.py  gerrit_ssh.py  gerrit_update.py
tests/: test_gerrit.py  test_gerrit_query.py
