[metadata]
name = gerrit-cli
summary = Simple gerrit command line tools
description-file =
    README.md
author = Amrith Kumar
author-email = amrith@amrith.org
home-page = http://hypecycles.com
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7

[files]
packages = gerrit_cli

[entry_points]
console_scripts =
    gerrit-cli = gerrit_cli.gerrit:main

[global]
setup-hooks =
    pbr.hooks.setup_hook

[wheel]
universal = 1
